--- a/index.ipynb
+++ b/index.ipynb
@@ -104,9 +104,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'City': 'Buenos Aires',\n",
+       " 'Country': 'Argentina',\n",
+       " 'Population': 2891,\n",
+       " 'Area': 203}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas\n",
     "travel_df = pandas.read_excel('./cities.xlsx')\n",
@@ -139,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
